--- a/static/stat120/Day9.html
+++ b/static/stat120/Day9.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 13 2023
+ April 14 2023
 
 
 ---
@@ -391,7 +391,7 @@ Please work on the in-class activity and we will discuss this together!
 ]
 ]
 
-<div class="countdown" id="timer_c8443755" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_8bee057a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
