--- a/static/stat220/Day9.html
+++ b/static/stat220/Day9.html
@@ -48,7 +48,7 @@ class: title-slide, middle
 
 ### .fancy[Spring 23]
 
- April 13 2023
+ April 14 2023
 
 ---
 
@@ -527,7 +527,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_68db0480" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_d34ca26e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -815,7 +815,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_bd8a2a7a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_cb58a9ba" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
