--- a/public/courses/stat120/week1/index.html
+++ b/public/courses/stat120/week1/index.html
@@ -52,8 +52,7 @@
   
     
   
-  <meta name="description" content="Day 1 Slides (pdf/html)
-Day 2 Slides (pdf/html) Day 3 Slides (pdf/html) " />
+  <meta name="description" content="Day 1 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week1/" />
@@ -297,8 +296,7 @@ Day 2 Slides (pdf/html) Day 3 Slides (pdf/html) " />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week1/" />
   <meta property="og:title" content="Week 1 | Deepak Bastola" />
-  <meta property="og:description" content="Day 1 Slides (pdf/html)
-Day 2 Slides (pdf/html) Day 3 Slides (pdf/html) " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 1 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -792,9 +790,14 @@ Day 2 Slides (pdf/html) Day 3 Slides (pdf/html) " /><meta property="og:image" co
 
           <div class="article-style">
             <p>Day 1 Slides (<a href="/stat120/Day1.pdf" target="_blank">pdf</a>/<a href="/stat120/Day1.html" target="_blank">html</a>)</p>
-<h1 id="day-2-slides-a-hrefstat120day2pdf-target_blankpdfaa-hrefstat120day2html-target_blankhtmla">Day 2 Slides (<a href="/stat120/Day2.pdf" target="_blank">pdf</a>/<a href="/stat120/Day2.html" target="_blank">html</a>)</h1>
-<h1 id="heading"></h1>
-<h1 id="day-3-slides-a-hrefstat120day3pdf-target_blankpdfaa-hrefstat120day3html-target_blankhtmla">Day 3 Slides (<a href="/stat120/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/Day3.html" target="_blank">html</a>)</h1>
+<!--
+
+Day 2 Slides (<a href="/stat120/Day2.pdf" target="_blank">pdf</a>/<a href="/stat120/Day2.html" target="_blank">html</a>)
+
+Day 3 Slides (<a href="/stat120/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/Day3.html" target="_blank">html</a>)
+
+
+-->
 
           </div>
 
