--- a/public/courses/stat120/week5/index.html
+++ b/public/courses/stat120/week5/index.html
@@ -52,7 +52,7 @@
   
     
   
-  <meta name="description" content=" Day 13 Slides (pdf/html) Day 14 Slides (pdf/html) Day 15 Slides (pdf) " />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week5/" />
@@ -296,7 +296,7 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week5/" />
   <meta property="og:title" content="Week 5 | Deepak Bastola" />
-  <meta property="og:description" content=" Day 13 Slides (pdf/html) Day 14 Slides (pdf/html) Day 15 Slides (pdf) " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -789,12 +789,15 @@
           <h1>Week 5</h1>
 
           <div class="article-style">
-            <h1 id="heading"></h1>
-<h1 id="day-13-slides-a-hrefstat120day13pdf-target_blankpdfaa-hrefstat120day13html-target_blankhtmla">Day 13 Slides (<a href="/stat120/Day13.pdf" target="_blank">pdf</a>/<a href="/stat120/Day13.html" target="_blank">html</a>)</h1>
-<h1 id="heading-1"></h1>
-<h1 id="day-14-slides-a-hrefstat120day14pdf-target_blankpdfaa-hrefstat120day14html-target_blankhtmla">Day 14 Slides (<a href="/stat120/Day14.pdf" target="_blank">pdf</a>/<a href="/stat120/Day14.html" target="_blank">html</a>)</h1>
-<h1 id="heading-2"></h1>
-<h1 id="day-15-slides-a-hrefstat120day15pdf-target_blankpdfa">Day 15 Slides (<a href="/stat120/Day15.pdf" target="_blank">pdf</a>)</h1>
+            <!--
+
+Day 13 Slides (<a href="/stat120/Day13.pdf" target="_blank">pdf</a>/<a href="/stat120/Day13.html" target="_blank">html</a>)
+
+Day 14 Slides (<a href="/stat120/Day14.pdf" target="_blank">pdf</a>/<a href="/stat120/Day14.html" target="_blank">html</a>)
+
+Day 15 Slides (<a href="/stat120/Day15.pdf" target="_blank">pdf</a>)
+
+-->
 
           </div>
 
