--- a/public/courses/stat120/week6/index.html
+++ b/public/courses/stat120/week6/index.html
@@ -52,8 +52,7 @@
   
     
   
-  <meta name="description" content="Day 16 Slides (pdf/html)
-Day 17 Slides (pdf/html)" />
+  <meta name="description" content=" " />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week6/" />
@@ -297,8 +296,7 @@ Day 17 Slides (pdf/html)" />
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week6/" />
   <meta property="og:title" content="Week 6 | Deepak Bastola" />
-  <meta property="og:description" content="Day 16 Slides (pdf/html)
-Day 17 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content=" " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -791,8 +789,13 @@ Day 17 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.n
           <h1>Week 6</h1>
 
           <div class="article-style">
-            <p>Day 16 Slides (<a href="/stat120/Day16.pdf" target="_blank">pdf</a>/<a href="/stat120/Day16.html" target="_blank">html</a>)</p>
-<p>Day 17 Slides (<a href="/stat120/Day17.pdf" target="_blank">pdf</a>/<a href="/stat120/Day17.html" target="_blank">html</a>)</p>
+            <!--
+
+Day 16 Slides (<a href="/stat120/Day16.pdf" target="_blank">pdf</a>/<a href="/stat120/Day16.html" target="_blank">html</a>)
+
+Day 17 Slides (<a href="/stat120/Day17.pdf" target="_blank">pdf</a>/<a href="/stat120/Day17.html" target="_blank">html</a>)
+
+-->
 
           </div>
 
