--- a/static/stat120/Day1.html
+++ b/static/stat120/Day1.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- September 10 2023
+ September 11 2023
 
 ---
 
@@ -1386,13 +1386,13 @@ class: action, middle
 &lt;br&gt;
 .bq.font90[
 - Make a course folder called 'stat120' either on your Maize account or on your local computer 
-- Please download the in-class activity file for Day 1 from [moodle](https://moodle.carleton.edu/course/view.php?id=42303) and go to [class helper web page](https://stat120-fall23.netlify.app/) 
-- We will go over this activity together. 
+- Please download the Assignment-0 template from [moodle](https://moodle.carleton.edu/course/view.php?id=42303) and go to [class helper web page](https://stat120-fall23.netlify.app/) 
+- We will go over this together. 
 ]
 
 ]
 
-<div class="countdown" id="timer_ce53290a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0431c679" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
