--- a/static/stat120/Day1.html
+++ b/static/stat120/Day1.html
@@ -1385,14 +1385,14 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 .bq.font90[
-- Make a course folder called 'stat120' either on your Maize account or on your local computer 
+- Make a course folder called 'stat120' either on your [Maize](https://maize.mathcs.carleton.edu/auth-sign-in?appUri=%2F) account or on your local computer 
 - Please download the Assignment-0 template from [moodle](https://moodle.carleton.edu/course/view.php?id=42303) and go to [class helper web page](https://stat120-fall23.netlify.app/) 
 - We will go over this together. 
 ]
 
 ]
 
-<div class="countdown" id="timer_0431c679" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_80f448d3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
